--- a/style.css
+++ b/style.css
@@ -67,8 +67,16 @@ a {
   grid-column: 2; 
   justify-self: end;
   width:100%;
+  height:100%; 
+}
+
+.article-picture {
+  padding: 15px;
+  width:100%; 
   height:100%;
-  
+  border-radius: 40px;
+  float: left ;
+ 
 }
 
 .logo-social {
@@ -104,13 +112,10 @@ p {
 }
 
 .caroussel {
-  height:200px;
+  height:300px;
   border-radius: 25px;
 }
-.carousel-item {
-  margin-left:33%;
-  
-}
+
 
 .card {
   border :#7DBED8;
